--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
    ========================================================================== */
 
 @font-face { font-family: Lato; src: url('../fonts/Lato-Light.ttf'); }
+@font-face { font-family: Roboto; src: url('../fonts/RobotoCondensed-Bold.ttf'); }
 
 html {
     color: #222;
@@ -124,6 +125,13 @@ textarea {
     flex-direction: row;
     justify-content: space-evenly;
     min-width: 100vw;
+    align-items: center;
+}
+
+.main .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .main .main-content .logo {
@@ -141,19 +149,34 @@ textarea {
 
 .main .description {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px;
+    max-width: 500px;
+}
+
+.main .description .download {
+    margin-top: 20px;
 }
 
 .main .main-content .preview {
+    display: flex;
     padding: 20px;
 }
 
 .main .main-content .preview img {
     height: 100%;
     width: 100%;
+}
+
+.main .main-content .preview-mobile {
+    display: none;
+}
+
+.main .main-content .preview-mobile img {
+    width: 100%;
+    height: 100%;
 }
 
 .footer {
@@ -186,20 +209,48 @@ h3 {
     font-size: 1.5em;
 }
 
+b {
+    font-family: Roboto;
+}
+
 @media only screen
-and (min-device-width : 375px)
-and (max-device-width : 812px)
+and (min-device-width : 320px)
+and (max-device-width : 823px)
 and (-webkit-device-pixel-ratio : 3) {
     .main .main-content {
         flex-direction: column;
+    }
+
+    .main .description {
+        width: calc(100% - 40px);
+    }
+
+    .main .main-content .preview-mobile {
+        display: flex;
+    }
+
+    .main .main-content .preview {
+        display: none;
     }
 }
 
 @media only screen
 and (min-device-width : 320px)
-and (max-device-width : 667px) {
+and (max-device-width : 737px) {
     .main .main-content {
         flex-direction: column;
+    }
+
+    .main .description {
+        width: calc(100% - 40px);
+    }
+
+    .main .main-content .preview-mobile {
+        display: flex;
+    }
+
+    .main .main-content .preview {
+        display: none;
     }
 }
 
