--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ textarea {
     flex-direction: column;
     align-items: center;
     background: white;
+    width: 100%;
 }
 
 .main .main-content {
@@ -164,6 +165,11 @@ textarea {
     min-width: 100vw;
     align-items: center;
     padding: 30px 0;
+    width: 100%;
+}
+
+.snap-assist .main .main-content {
+    padding: 0;
 }
 
 .main .app-header {
@@ -324,6 +330,14 @@ and (max-device-width : 737px) {
 
     .main .main-content .preview {
         display: none;
+    }
+
+    .snap-assist .main .app-header {
+        margin-bottom: -100px;
+    }
+
+    .snap-assist .main .text {
+        margin-top: -100px;
     }
 }
 
